# RAG-based-Medical-Chatbot-Langchain-LLM

./: README.md  app.py  build_index.py  main.py  pyproject.toml  requirements.txt  setup.py  template.py
medi_chat/config/: constants.py
medi_chat/exception/: exception_handler.py
medi_chat/helpers/: index_store.py
medi_chat/logger/: logger.py
medi_chat/notebook/: research_notebook.ipynb  trials.ipynb
medi_chat/src/: huggingface_embedder.py  pdf_loader.py  prompts.py  text_splitter.py
medi_chat/src/oop/: config.py  data_loader.py  embeddings.py  exception.py  indexer.py  processing.py  prompts.py  rag.py
medi_chat/src/rag/: docprocessor.py  embeddings_loader.py  helper.py  indexer.py  prompt.py
medi_chat/src/utils/: logger.py
medi_chat/temp_dir/: helper_class.py
medi_chat/utils/: exception.py  logger.py
static/: style.css
templates/: chat.html
tests/: test_integration.py  test_processing.py
